--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <h1>HTML & CSS Cheatsheet</h1>
         <aside>
             <nav>
-                <a href="#">HTML Tags</a>
-                <a href="#">CSS Text & Color Modification</a>
+                <a href="#HTML-Tags">HTML Tags</a>
+                <br>
+                <br>
+                <a href="#CSS-Attri">CSS Attributes</a>
             </nav>
         </aside>
     </header>
     <main>
-        <h2>HTML Tags</h2>
+        <h2 id="HTML-Tags">HTML Tags</h2>
         <table>
             <thead>
                 <tr>
@@ -28,24 +30,24 @@
                 </tr>
             </thead>
             <tr>
-                <td>&lt;h1&gt;</td>
+                <td class="el-at">&lt;h1&gt;</td>
                 <td>The h1 tag is used for the main heading, it also ranges from h1 - h6,
                     h6 being the least important heading.
                 </td>
                 <td>&lt;h1&gt;HELLO WORLD!&lt;/h1&gt;</td>
             </tr>
             <tr>
-                <td>&lt;p&gt;</td>
+                <td class="el-at">&lt;p&gt;</td>
                 <td>The p tag is used for paragraphs.</td>
                 <td>&lt;p&gt;This is a Paragraph.&lt;/p&gt;</td>
             </tr>
             <tr>
-                <td>&lt;a&gt;</td>
+                <td class="el-at">&lt;a&gt;</td>
                 <td>The a tag is a self closing tag and is used for creating hyperlinks it also includes a href attribute to make it go to the right place.</td>
                 <td>&lt;a href="#" &gt;Take me Home!&lt;/a&gt;</td>
             </tr>
             <tr>
-                <td>&lt;ul&gt;</td>
+                <td class="el-at">&lt;ul&gt;</td>
                 <td>The ul tag creates an unordered list using &lt;li&gt; tags to make each item.</td>
                 <td>&lt;ul&gt;
                         &lt;li&gt;Im a List item&lt;/li&gt;
@@ -54,7 +56,7 @@
                 </td>
             </tr>
             <tr>
-                <td>&lt;ol&gt;</td>
+                <td class="el-at">&lt;ol&gt;</td>
                 <td>The ol tag is like the ul tag but instead of the list be unorderd this creates an ordered list with numbered points.</td>
                 <td>&lt;ol&gt;
                         &lt;li&gt;Im a List item&lt;/li&gt;
@@ -63,17 +65,20 @@
                 </td>
             </tr>
             <tr>
-                <td>&lt;br&gt;</td>
+                <td class="el-at">&lt;br&gt;</td>
                 <td>The br tag is a self closing tag that breaks up a paragraph onto a new line.</td>
                 <td>&lt;p&gt;Im a &lt;br&gt; <br> split paragraph&lt;/p&gt;</td>
             </tr>
             <tr>
-                <td>&lt;button&gt;</td>
+                <td class="el-at">&lt;button&gt;</td>
                 <td>The Button tag is pretty self explanitory, it creates a button</td>
                 <td>&lt;button&gt;I'm a button&lt;/button&gt;</td>
             </tr>
         </table>
-        <h2>CSS Text & Color Modification</h2>
+        <br>
+        <br>
+        <br>
+        <h2 id="CSS-Attri">CSS Attributes</h2>
         <table>
             <thead>
                 <tr>
@@ -83,7 +88,7 @@
                 </tr>
             </thead>
             <tr>
-                <td>color: ;</td>
+                <td class="el-at">color: ;</td>
                 <td>The color attribute changes the color of the selected element's text.</td>
                 <td>Color: red; (This would make the text red)</td>
             </tr>
@@ -93,41 +98,45 @@
                 <td>font-family: Helvetica; (This would make the font Helvetica)</td>
             </tr>
             <tr>
-                <td>font-weight: ;</td>
+                <td class="el-at">font-weight: ;</td>
                 <td>The font-weight attribute changes thickness of the selected elements text i.e bold, regular, thin etc.</td>
                 <td>font-weight: bold; (This would make the text bold)</td>
             </tr>
             <tr>
-                <td>backgroung-color: ;</td>
+                <td class="el-at">backgroung-color: ;</td>
                 <td>The background-color attribute changes the color of the selected elements background.</td>
                 <td>background-color: purple; (This would make the background purple)</td>
             </tr>
             <tr>
-                <td>background-image: ;</td>
+                <td class="el-at">background-image: ;</td>
                 <td>The background-image attribute makes the background of the selected element a image, it uses a URL() to show where the image is stored.</td>
                 <td>background-image: URL(./images/image.png); (This would make the background image, image.png)</td>
             </tr>
             <tr>
-                <td>text-decoration: ;</td>
+                <td class="el-at">text-decoration: ;</td>
                 <td>The text-decoration attribute adds or removes an underline to the selected element.</td>
                 <td>text-decoration: none; (This would remove the underline of an element most commonly used for removing the underline on an &lt;a&gt; element)</td>
             </tr>
             <tr>
-                <td>border: ;</td>
+                <td class="el-at">border: ;</td>
                 <td>The border attribut adds or removes the border around an element.</td>
                 <td>border: 1px solid black; (This would add a black border that is 1px thick)</td>
             </tr>
         </table>
     </main>
     <footer>
-        <h3>Created by:</h3>
-        <h4>Joshua Mclelland</h4>
-        <h3>Contact Here:</h3>
-        <ul>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">Fiverr</a></li>
-            <li><a href="mailto:joshua.mclelland2@yahoo.com">Email Me</a></li>
-        </ul>
+        <div class="author">
+            <h3>Created by:</h3>
+            <h4>Joshua Mclelland</h4>
+        </div>
+        <div class="contact">
+            <h3>Contact Here:</h3>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/josh-mcfield-366875222/">LinkedIn</a></li>
+                <li><a href="https://www.fiverr.com/joshfieldwebdev?public_mode=true">Fiverr</a></li>
+                <li><a href="mailto:joshua.mclelland2@yahoo.com">Email Me</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
