--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <td>Color: red; (This would make the text red)</td>
             </tr>
             <tr>
-                <td>font-family: ;</td>
+                <td class="el-at">font-family: ;</td>
                 <td>The font-family attribute changes the font of the selected element.</td>
                 <td>font-family: Helvetica; (This would make the font Helvetica)</td>
             </tr>
